--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "![Design preview for the Social media dashboard with theme switcher coding challenge](./design/desktop-preview.jpg)",
   "main": "gulpfile.js",
   "scripts": {
-    "start":"echo Use command npm install to install all dev dependencies"
+    "start": "echo Use command npm install to install all dev dependencies"
   },
   "keywords": [],
   "author": "RabbitMaid",
@@ -15,12 +15,12 @@
     "autoprefixer": "^10.4.13",
     "browser-sync": "^2.27.12",
     "cssnano": "^5.1.15",
-    "dart-sass": "^1.25.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
-    "gulp-terser": "^2.1.0"
+    "gulp-terser": "^2.1.0",
+    "sass": "^1.58.3"
   }
 }
